bisdl_language/gen/ModuleParser.py
# Generated from bisdl/Module.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ModuleParser ( Parser ):

    grammarFileName = "Module.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'MODULE'", "'TIMESCALE'", "'SCOPE'", 
                     "'PROCESS'", "'TRANSCRIPTION'", "'TRANSLATION'", "'DEGRADATION'", 
                     "'PROTEIN_COMPLEX_FORMATION'", "'ENZYMATIC_REACTION'", 
                     "'CUSTOM_PROCESS'", "'INHIBITORS'", "'INDUCERS'", "'ACTIVATORS'", 
                     "'PARACRINE_SIGNALS'", "'JUXTACRINE_SIGNAL'", "'DIFFUSION'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "','", "':'", "'*'", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "GENE", "MRNA", "PROTEIN", "RECEPTOR", 
                      "MOLECULE", "COMPLEX", "ID", "INT", "RO", "RC", "SO", 
                      "SC", "COMMA", "COLON", "STAR", "RARROW", "MULT", 
                      "WS", "LINE_COMMENT" ]

    RULE_root = 0
    RULE_timescale = 1
    RULE_scopes = 2
    RULE_scope = 3
    RULE_coords = 4
    RULE_processes = 5
    RULE_process = 6
    RULE_process_type = 7
    RULE_transcription = 8
    RULE_translation = 9
    RULE_degradation = 10
    RULE_protein_complex_formation = 11
    RULE_enzymatic_reaction = 12
    RULE_custom_process = 13
    RULE_regulation = 14
    RULE_regulation_type = 15
    RULE_m_list = 16
    RULE_molecule = 17
    RULE_signal = 18
    RULE_signals = 19
    RULE_paracrine_signals = 20
    RULE_juxtacrine_signal = 21
    RULE_diffusion = 22

    ruleNames =  [ "root", "timescale", "scopes", "scope", "coords", "processes", 
                   "process", "process_type", "transcription", "translation", 
                   "degradation", "protein_complex_formation", "enzymatic_reaction", 
                   "custom_process", "regulation", "regulation_type", "m_list", 
                   "molecule", "signal", "signals", "paracrine_signals", 
                   "juxtacrine_signal", "diffusion" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    GENE=17
    MRNA=18
    PROTEIN=19
    RECEPTOR=20
    MOLECULE=21
    COMPLEX=22
    ID=23
    INT=24
    RO=25
    RC=26
    SO=27
    SC=28
    COMMA=29
    COLON=30
    STAR=31
    RARROW=32
    MULT=33
    WS=34
    LINE_COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ModuleParser.ID, 0)

        def scopes(self):
            return self.getTypedRuleContext(ModuleParser.ScopesContext,0)


        def timescale(self):
            return self.getTypedRuleContext(ModuleParser.TimescaleContext,0)


        def paracrine_signals(self):
            return self.getTypedRuleContext(ModuleParser.Paracrine_signalsContext,0)


        def diffusion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModuleParser.DiffusionContext)
            else:
                return self.getTypedRuleContext(ModuleParser.DiffusionContext,i)


        def getRuleIndex(self):
            return ModuleParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ModuleParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(ModuleParser.T__0)
            self.state = 47
            self.match(ModuleParser.ID)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ModuleParser.T__1:
                self.state = 48
                self.timescale()


            self.state = 51
            self.scopes()
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ModuleParser.T__13:
                self.state = 52
                self.paracrine_signals()


            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ModuleParser.T__15:
                self.state = 55
                self.diffusion()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimescaleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ModuleParser.INT, 0)

        def getRuleIndex(self):
            return ModuleParser.RULE_timescale

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimescale" ):
                listener.enterTimescale(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimescale" ):
                listener.exitTimescale(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimescale" ):
                return visitor.visitTimescale(self)
            else:
                return visitor.visitChildren(self)




    def timescale(self):

        localctx = ModuleParser.TimescaleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_timescale)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ModuleParser.T__1)
            self.state = 62
            self.match(ModuleParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModuleParser.ScopeContext)
            else:
                return self.getTypedRuleContext(ModuleParser.ScopeContext,i)


        def getRuleIndex(self):
            return ModuleParser.RULE_scopes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScopes" ):
                listener.enterScopes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScopes" ):
                listener.exitScopes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScopes" ):
                return visitor.visitScopes(self)
            else:
                return visitor.visitChildren(self)




    def scopes(self):

        localctx = ModuleParser.ScopesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_scopes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ModuleParser.T__2:
                self.state = 64
                self.match(ModuleParser.T__2)
                self.state = 65
                self.scope()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ModuleParser.ID, 0)

        def coords(self):
            return self.getTypedRuleContext(ModuleParser.CoordsContext,0)


        def processes(self):
            return self.getTypedRuleContext(ModuleParser.ProcessesContext,0)


        def juxtacrine_signal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModuleParser.Juxtacrine_signalContext)
            else:
                return self.getTypedRuleContext(ModuleParser.Juxtacrine_signalContext,i)


        def getRuleIndex(self):
            return ModuleParser.RULE_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScope" ):
                listener.exitScope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScope" ):
                return visitor.visitScope(self)
            else:
                return visitor.visitChildren(self)




    def scope(self):

        localctx = ModuleParser.ScopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(ModuleParser.ID)
            self.state = 72
            self.coords()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ModuleParser.T__3:
                self.state = 73
                self.processes()


            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ModuleParser.T__14:
                self.state = 76
                self.juxtacrine_signal()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RO(self):
            return self.getToken(ModuleParser.RO, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ModuleParser.INT)
            else:
                return self.getToken(ModuleParser.INT, i)

        def COMMA(self):
            return self.getToken(ModuleParser.COMMA, 0)

        def RC(self):
            return self.getToken(ModuleParser.RC, 0)

        def getRuleIndex(self):
            return ModuleParser.RULE_coords

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoords" ):
                listener.enterCoords(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoords" ):
                listener.exitCoords(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCoords" ):
                return visitor.visitCoords(self)
            else:
                return visitor.visitChildren(self)




    def coords(self):

        localctx = ModuleParser.CoordsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_coords)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ModuleParser.RO)
            self.state = 83
            self.match(ModuleParser.INT)
            self.state = 84
            self.match(ModuleParser.COMMA)
            self.state = 85
            self.match(ModuleParser.INT)
            self.state = 86
            self.match(ModuleParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def process(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModuleParser.ProcessContext)
            else:
                return self.getTypedRuleContext(ModuleParser.ProcessContext,i)


        def getRuleIndex(self):
            return ModuleParser.RULE_processes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcesses" ):
                listener.enterProcesses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcesses" ):
                listener.exitProcesses(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcesses" ):
                return visitor.visitProcesses(self)
            else:
                return visitor.visitChildren(self)




    def processes(self):

        localctx = ModuleParser.ProcessesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_processes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.match(ModuleParser.T__3)
                self.state = 89
                self.process()
                self.state = 92 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ModuleParser.T__3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ModuleParser.ID, 0)

        def timescale(self):
            return self.getTypedRuleContext(ModuleParser.TimescaleContext,0)


        def process_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModuleParser.Process_typeContext)
            else:
                return self.getTypedRuleContext(ModuleParser.Process_typeContext,i)


        def getRuleIndex(self):
            return ModuleParser.RULE_process

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcess" ):
                listener.enterProcess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcess" ):
                listener.exitProcess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcess" ):
                return visitor.visitProcess(self)
            else:
                return visitor.visitChildren(self)




    def process(self):

        localctx = ModuleParser.ProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_process)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(ModuleParser.ID)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ModuleParser.T__1:
                self.state = 95
                self.timescale()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 96
                    self.process_type()
                    self.state = 99 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ModuleParser.T__4) | (1 << ModuleParser.T__5) | (1 << ModuleParser.T__6) | (1 << ModuleParser.T__7) | (1 << ModuleParser.T__8) | (1 << ModuleParser.T__9))) != 0)):
                        break



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Process_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def transcription(self):
            return self.getTypedRuleContext(ModuleParser.TranscriptionContext,0)


        def translation(self):
            return self.getTypedRuleContext(ModuleParser.TranslationContext,0)


        def degradation(self):
            return self.getTypedRuleContext(ModuleParser.DegradationContext,0)


        def protein_complex_formation(self):
            return self.getTypedRuleContext(ModuleParser.Protein_complex_formationContext,0)


        def enzymatic_reaction(self):
            return self.getTypedRuleContext(ModuleParser.Enzymatic_reactionContext,0)


        def custom_process(self):
            return self.getTypedRuleContext(ModuleParser.Custom_processContext,0)


        def getRuleIndex(self):
            return ModuleParser.RULE_process_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcess_type" ):
                listener.enterProcess_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcess_type" ):
                listener.exitProcess_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcess_type" ):
                return visitor.visitProcess_type(self)
            else:
                return visitor.visitChildren(self)




    def process_type(self):

        localctx = ModuleParser.Process_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_process_type)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ModuleParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.transcription()
                pass
            elif token in [ModuleParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.translation()
                pass
            elif token in [ModuleParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.degradation()
                pass
            elif token in [ModuleParser.T__7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.protein_complex_formation()
                pass
            elif token in [ModuleParser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.enzymatic_reaction()
                pass
            elif token in [ModuleParser.T__9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 108
                self.custom_process()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TranscriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RO(self):
            return self.getToken(ModuleParser.RO, 0)

        def GENE(self):
            return self.getToken(ModuleParser.GENE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ModuleParser.COMMA)
            else:
                return self.getToken(ModuleParser.COMMA, i)

        def MRNA(self):
            return self.getToken(ModuleParser.MRNA, 0)

        def RC(self):
            return self.getToken(ModuleParser.RC, 0)

        def regulation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModuleParser.RegulationContext)
            else:
                return self.getTypedRuleContext(ModuleParser.RegulationContext,i)


        def getRuleIndex(self):
            return ModuleParser.RULE_transcription

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranscription" ):
                listener.enterTranscription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranscription" ):
                listener.exitTranscription(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranscription" ):
                return visitor.visitTranscription(self)
            else:
                return visitor.visitChildren(self)




    def transcription(self):

        localctx = ModuleParser.TranscriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_transcription)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(ModuleParser.T__4)
            self.state = 112
            self.match(ModuleParser.RO)
            self.state = 113
            self.match(ModuleParser.GENE)
            self.state = 114
            self.match(ModuleParser.COMMA)
            self.state = 115
            self.match(ModuleParser.MRNA)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ModuleParser.COMMA:
                self.state = 116
                self.match(ModuleParser.COMMA)
                self.state = 117
                self.regulation()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(ModuleParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TranslationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RO(self):
            return self.getToken(ModuleParser.RO, 0)

        def MRNA(self):
            return self.getToken(ModuleParser.MRNA, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ModuleParser.COMMA)
            else:
                return self.getToken(ModuleParser.COMMA, i)

        def PROTEIN(self):
            return self.getToken(ModuleParser.PROTEIN, 0)

        def RC(self):
            return self.getToken(ModuleParser.RC, 0)

        def regulation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModuleParser.RegulationContext)
            else:
                return self.getTypedRuleContext(ModuleParser.RegulationContext,i)


        def getRuleIndex(self):
            return ModuleParser.RULE_translation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslation" ):
                listener.enterTranslation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslation" ):
                listener.exitTranslation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslation" ):
                return visitor.visitTranslation(self)
            else:
                return visitor.visitChildren(self)




    def translation(self):

        localctx = ModuleParser.TranslationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_translation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(ModuleParser.T__5)
            self.state = 126
            self.match(ModuleParser.RO)
            self.state = 127
            self.match(ModuleParser.MRNA)
            self.state = 128
            self.match(ModuleParser.COMMA)
            self.state = 129
            self.match(ModuleParser.PROTEIN)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ModuleParser.COMMA:
                self.state = 130
                self.match(ModuleParser.COMMA)
                self.state = 131
                self.regulation()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(ModuleParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DegradationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RO(self):
            return self.getToken(ModuleParser.RO, 0)

        def molecule(self):
            return self.getTypedRuleContext(ModuleParser.MoleculeContext,0)


        def RC(self):
            return self.getToken(ModuleParser.RC, 0)

        def getRuleIndex(self):
            return ModuleParser.RULE_degradation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDegradation" ):
                listener.enterDegradation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDegradation" ):
                listener.exitDegradation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDegradation" ):
                return visitor.visitDegradation(self)
            else:
                return visitor.visitChildren(self)




    def degradation(self):

        localctx = ModuleParser.DegradationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_degradation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(ModuleParser.T__6)
            self.state = 140
            self.match(ModuleParser.RO)
            self.state = 141
            self.molecule()
            self.state = 142
            self.match(ModuleParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Protein_complex_formationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RO(self):
            return self.getToken(ModuleParser.RO, 0)

        def m_list(self):
            return self.getTypedRuleContext(ModuleParser.M_listContext,0)


        def COMMA(self):
            return self.getToken(ModuleParser.COMMA, 0)

        def molecule(self):
            return self.getTypedRuleContext(ModuleParser.MoleculeContext,0)


        def RC(self):
            return self.getToken(ModuleParser.RC, 0)

        def getRuleIndex(self):
            return ModuleParser.RULE_protein_complex_formation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProtein_complex_formation" ):
                listener.enterProtein_complex_formation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProtein_complex_formation" ):
                listener.exitProtein_complex_formation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProtein_complex_formation" ):
                return visitor.visitProtein_complex_formation(self)
            else:
                return visitor.visitChildren(self)




    def protein_complex_formation(self):

        localctx = ModuleParser.Protein_complex_formationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_protein_complex_formation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(ModuleParser.T__7)
            self.state = 145
            self.match(ModuleParser.RO)
            self.state = 146
            self.m_list()
            self.state = 147
            self.match(ModuleParser.COMMA)
            self.state = 148
            self.molecule()
            self.state = 149
            self.match(ModuleParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enzymatic_reactionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RO(self):
            return self.getToken(ModuleParser.RO, 0)

        def PROTEIN(self):
            return self.getToken(ModuleParser.PROTEIN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ModuleParser.COMMA)
            else:
                return self.getToken(ModuleParser.COMMA, i)

        def SO(self, i:int=None):
            if i is None:
                return self.getTokens(ModuleParser.SO)
            else:
                return self.getToken(ModuleParser.SO, i)

        def m_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModuleParser.M_listContext)
            else:
                return self.getTypedRuleContext(ModuleParser.M_listContext,i)


        def SC(self, i:int=None):
            if i is None:
                return self.getTokens(ModuleParser.SC)
            else:
                return self.getToken(ModuleParser.SC, i)

        def RC(self):
            return self.getToken(ModuleParser.RC, 0)

        def getRuleIndex(self):
            return ModuleParser.RULE_enzymatic_reaction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnzymatic_reaction" ):
                listener.enterEnzymatic_reaction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnzymatic_reaction" ):
                listener.exitEnzymatic_reaction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnzymatic_reaction" ):
                return visitor.visitEnzymatic_reaction(self)
            else:
                return visitor.visitChildren(self)




    def enzymatic_reaction(self):

        localctx = ModuleParser.Enzymatic_reactionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_enzymatic_reaction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(ModuleParser.T__8)
            self.state = 152
            self.match(ModuleParser.RO)
            self.state = 153
            self.match(ModuleParser.PROTEIN)
            self.state = 154
            self.match(ModuleParser.COMMA)
            self.state = 155
            self.match(ModuleParser.SO)
            self.state = 156
            self.m_list()
            self.state = 157
            self.match(ModuleParser.SC)
            self.state = 158
            self.match(ModuleParser.COMMA)
            self.state = 159
            self.match(ModuleParser.SO)
            self.state = 160
            self.m_list()
            self.state = 161
            self.match(ModuleParser.SC)
            self.state = 162
            self.match(ModuleParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Custom_processContext(ParserRuleContext):
        __slots__ = 'parser'
